--- a/easybbs-web/src/main/resources/application.properties
+++ b/easybbs-web/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.mvc.favicon.enable=false
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 #\u6570\u636E\u5E93\u914D\u7F6E
+#spring.datasource.url=jdbc:mysql://192.168.202.129:3307/easybbs?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
 spring.datasource.url=jdbc:mysql://192.168.233.128:3306/easybbs?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
 spring.datasource.username=root
 spring.datasource.password=123456
@@ -40,7 +41,7 @@ spring.mail.properties.mail.debug=true
 send.mail.open=true
 #\u90AE\u4EF6\u914D\u7F6E\u7ED3\u675F
 #\u9879\u76EE\u76EE\u5F55
-project.folder=d:/webser/web_app/easybbs/
+project.folder=c:/webser/web_app/easybbs/
 #\u65E5\u5FD7\u7EA7\u522B\u914D\u7F6E
 log.root.level=debug
 #\u5185\u90E8\u63A5\u53E3\u76F8\u5173
